<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/HomeId"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:background="#2196F3"
            android:text="@string/HomeBtn" />

        <Button
            android:id="@+id/CatagoryId"
            android:layout_width="106dp"
            android:layout_height="wrap_content"
            android:background="#2196F3"
            android:text="@string/CatagoryBtn" />

        <Button
            android:id="@+id/ProfileId"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:background="#2196F3"
            android:text="@string/MyJobsBtn" />

        <Button
            android:id="@+id/SignInId"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#2196F3"
            android:text="@string/SignInBtn" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <EditText
            android:id="@+id/edit_searchId"
            android:layout_width="282dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:hint="Search jobs" />

        <Button
            android:id="@+id/searchId"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="#36BB43"
            android:text="@string/SearchBtn"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>